--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <section>
             <h1>Sobre nós</h1>
             <div class="text-decored">
-                <p>Começamos a atuar no ramo em 2010, desde então fomos aprendendo mais e mais sobre nosso público, há fim de melhorar sua experiência e sua maneira de se divertir.</p>
+                <p>Começamos a atuar no ramo em 2010, desde então fomos aprendendo mais e mais sobre nosso público, há fim de melhorar sua experiência e sua maneira de se divertir..</p>
 
                 <p>Nossos brinquedos são higienizados todos os dias, pois nos preocupamos acima de tudo com sua saúde nesses tempos difíceis.</p>
                         
