--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
      </header>
     <main>
         <div class="container-capa">
-            <img src="imagens/Banner_simpless.png" class="img-capa" alt="img-principal">
+            <img src="imagens/Baanner_simpless.png" class="img-capa" alt="img-principal">
         </div>
         <section>
             <h1>Sobre nós</h1>
